# mats-3-aligning-lms

./: .env.example  README.md  pyproject.toml  week1-big-bench.ipynb  week3-algo.ipynb
colab/: GPT_3_on_BIG_bench.ipynb
src/: main.py  openai_bb.py
