[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mykyta Baliesnyi"]

[tool.poetry.dependencies]
python = "^3.7.1"
python-dotenv = "^0.19.2"
numpy = "^1.14.5"
matplotlib = "^3.5.1"
openai = "^0.25.0"
scipy = "^1.9.2"
bigbench = { git = "https://github.com/google/BIG-bench.git", branch = "main" }

[tool.poetry.dev-dependencies]
black = "^22.1.0"
poethepoet = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
